--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
       
     </form>
 
-	</div>
+  </div>
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
