--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
     </form>
 
   </div>
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/script.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 </body>
 </html>
