--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="email" id="mail" name="user_email">
         
         <label for="title">Job Role</label>
-        <input type="text" id="other-title" name ="jod_role_other" placeholder="Other">
+        <input type="text" id="other-title" name ="job_role_other" placeholder="Other">
         <select id="title" name="user_title">
           <option value="full-stack js developer">Full Stack JavaScript Developer</option>
           <option value="front-end developer">Front End Developer</option>
