added drop down
dropdown is not working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="email" id="mail" name="user_email">
         
         <label for="title">Job Role</label>
-        <input type="text" id="other-title" name ="job_role_other" placeholder="Other">
+        <input type="text" id="other-title" name ="job_role_other" placeholder="Your Job Role">
         <select id="title" name="user_title">
           <option value="full-stack js developer">Full Stack JavaScript Developer</option>
           <option value="front-end developer">Front End Developer</option>
@@ -63,7 +63,6 @@
         <div id="colors-js-puns" class="">
           <label for="color">Color:</label>
           <select id="color">
-            <option> Select Color</option>
             <option value="cornflowerblue">Cornflower Blue (JS Puns shirt only)</option>
             <option value="darkslategrey">Dark Slate Grey (JS Puns shirt only)</option> 
             <option value="gold">Gold (JS Puns shirt only)</option> 
